fix: adding changes for firstpicture and multiple pictures support
